k8s/face-rec-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-rec-app
  namespace: face-rec-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: face-rec-app
  template:
    metadata:
      labels:
         app: face-rec-app
    spec:
      containers:
        - name: face-rec-app
          image: face-recognition-api
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: face-rec-app
  namespace: face-rec-ns
spec:
  selector:
    app: face-rec-app
  ports:
    protocol: TCP
    port: 80
    targetPort: 80
