k8s/ingress-face-rec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          path: /
          pathType: Prefix
          backend:
            service:
              name: face-rec-app
              port:
                number: 80
